Update Casio LA201 Settings.html

--- a/Casio LA201 Settings.html
+++ b/Casio LA201 Settings.html
@@ -149,7 +149,7 @@
 
         mInvert = $('#invert1').prop('checked') ? 1 : 0;
 	mHollowfont = $('#hollowfont1').prop('checked') ? 1 : 0;
-        mBranding = $('#branding_mask1').prop('checked') ? 1 : 0;
+        mBranding = $('#branding').prop('checked') ? 1 : 0;
 
         localStorage.setItem("invert", mInvert); 
 	localStorage.setItem("hollowfont", mHollowfont); 
