--- a/pebble/settings/Hollow3D.html
+++ b/pebble/settings/Hollow3D.html
@@ -3,6 +3,12 @@
 <head>
 	<title>Hollow3D Settings</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/bootstrap-theme.min.css" rel="stylesheet">
+
+	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 </head>
 <body>
     <div class="container">
