--- a/pebble/settings/Hollow3D.html
+++ b/pebble/settings/Hollow3D.html
@@ -58,6 +58,7 @@
           <label class="btn btn-primary">
             <input type="radio" name="hidezeros" id="hidezeros2" value="0"> No
           </label>
+	</div>
 	<hr />
         <h4>Hide Branding</h4>
         <p><small>Choose 'Yes' to hide the Pebble logo or 'No' to show it.</small></p>
