--- a/pebble/settings/Hollow3D.html
+++ b/pebble/settings/Hollow3D.html
@@ -38,14 +38,14 @@
           </label>
         </div>
         <hr />
-        <h4>UK Date Format</h4>
-        <p><small>Choose 'Yes' to use DD-MM or 'No' to use MM-DD.</small></p>
+        <h4>Date Format</h4>
+        <p><small>Choose either DAY-MONTH (DD-MM) or MONTH-DAY (MM-DD).</small></p>
         <div class="btn-group" data-toggle="buttons">
           <label class="btn btn-primary">
-            <input type="radio" name="ukdate" id="ukdate1" value="1"> Yes
+            <input type="radio" name="ukdate" id="ukdate1" value="1"> DD-MM
           </label>
           <label class="btn btn-primary">
-            <input type="radio" name="ukdate" id="ukdate2" value="0"> No
+            <input type="radio" name="ukdate" id="ukdate2" value="0"> MM-DD
           </label>
         </div>
         <hr />
