--- a/pebble/settings/LivePreview.html
+++ b/pebble/settings/LivePreview.html
@@ -26,7 +26,7 @@ Your browser does not support the HTML5 canvas tag.
 <script>
 
 var img = new Image();
-img.src = "https://cloud.githubusercontent.com/assets/7777321/8207712/36cec07a-14fb-11e5-905e-a172f52af23a.png";
+img.src = "http://nivz78.github.io/pebble/settings/images/LAQ-2000D.png";
 
 
 function draw(){
