--- a/pebble/settings/LivePreview.html
+++ b/pebble/settings/LivePreview.html
@@ -27,7 +27,9 @@ Your browser does not support the HTML5 canvas tag.
 
 var img = new Image();
 img.src = "http://nivz78.github.io/pebble/settings/images/LAQ-2000D.png";
-
+img.onload = function() {
+        draw();
+      };
 
 function draw(){
 
@@ -116,7 +118,7 @@ $("#inner").spectrum("set", '#000');
 $("#labels").spectrum("set", '#fff');
 
 // Do the initial draw of the preview
-draw();
+//draw();
 
 });
 
