--- a/pebble/settings/LivePreview.html
+++ b/pebble/settings/LivePreview.html
@@ -33,7 +33,7 @@ Your browser does not support the HTML5 canvas tag.
 <script>
 
 var img = new Image();
-img.src = "Preview.png";
+img.src = "/images/Preview.png";
 
 
 function draw(){
