--- a/pebble/settings/LivePreview.html
+++ b/pebble/settings/LivePreview.html
@@ -33,7 +33,7 @@ Your browser does not support the HTML5 canvas tag.
 <script>
 
 var img = new Image();
-img.src = "/images/LAQ-2000D.png";
+img.src = "http://nivz78.github.io/pebble/settings/images/LAQ-2000D.png";
 img.onload = function() {
         draw();
       };
