--- a/pebble/settings/LivePreview.html
+++ b/pebble/settings/LivePreview.html
@@ -40,7 +40,7 @@ img.onload = function() {
 
 
 function draw(){
-
+alert("draw");
     // Get the colours from our Spectrum pickers
     var outer = $("#outer").spectrum("get").toHex();
     var inner = $("#inner").spectrum("get").toHex();
