--- a/pebble/settings/LivePreview.html
+++ b/pebble/settings/LivePreview.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>91 Dub v3.0 Config</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/bootstrap-theme.min.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="css/spectrum.css">
@@ -9,7 +11,8 @@
 <body>
 
 <div class="container">
-
+<h2>Live Preview</h2>
+<p>Testing Live Preview for Pebble config using HTML 5 Canvas and Javascript.</p>
 <form id="configure-form" class="form-configure well" action="#" method="POST">
 <canvas id="canvas" width="144" height="168">
 Your browser does not support the HTML5 canvas tag.
