--- a/pebble/settings/LivePreview.html
+++ b/pebble/settings/LivePreview.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>91 Dub v3.0 Config</title>
+<title>Live Preview</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/bootstrap-theme.min.css" rel="stylesheet">
