--- a/pebble/settings/91dub.html
+++ b/pebble/settings/91dub.html
@@ -301,7 +301,7 @@ Choose your 91 Dub v3.0 settings below:
 <script>
 
 
-        $.get( "http://mirz.com/91dubv3/themes.json",{ "_": $.now() }, function( data ) {
+        $.get( "themes.json",{ "_": $.now() }, function( data ) {
           var sel = $("#presets");
           sel.empty();
           sel.append('<option></option>');
