--- a/pebble/settings/91dub.html
+++ b/pebble/settings/91dub.html
@@ -91,7 +91,7 @@ Choose your 91 Dub v3.0 settings below:
 
    <label class="item">
       Presets
-      <select name="presets" dir='rtl' class="item-select">
+      <select id="presets" name="presets" dir='rtl' class="item-select">
       </select>
     </label>
 
@@ -311,7 +311,8 @@ Choose your 91 Dub v3.0 settings below:
             sel.append('<option value="' + encodeURIComponent(JSON.stringify(data[i])) + '">' + data[i].theme[0].name + '</option>');
           }
         });  
-
+
+
 
 
 
