--- a/pebble/settings/91dub.html
+++ b/pebble/settings/91dub.html
@@ -302,6 +302,7 @@ Choose your 91 Dub v3.0 settings below:
 
 <script>
 
+function getThemes() {   
         $.get( "themes.json",{ "_": $.now() }, function( data ) {
           var sel = $("#presets");
           sel.empty();
@@ -310,8 +311,15 @@ Choose your 91 Dub v3.0 settings below:
             sel.append('<option value="' + encodeURIComponent(JSON.stringify(data[i])) + '">' + data[i].theme[0].name + '</option>');
           }
         });  
+    }
 
 
+
+$().ready(function () {
+
+      getThemes();
+
+      });
 
 
 var img = new Image();
