--- a/pebble/settings/91dub.html
+++ b/pebble/settings/91dub.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -143,31 +144,31 @@ Choose your 91 Dub v3.0 settings below:
 
      <label class="item">
       Outer Border
-      <input type="text" class="item-color item-color-normal" name="bg1color" value="#ffffff">
+      <input type="text" class="item-color item-color-normal" name="bg1color" id="bg1color" value="#ffffff">
     </label>
      <label class="item">
       Inner Border
-      <input type="text" class="item-color item-color-normal" name="bg2color" value="#000000">
+      <input type="text" class="item-color item-color-normal" name="bg2color" id="bg2color" value="#000000">
     </label>
      <label class="item">
       Inner Panel
-      <input type="text" class="item-color item-color-normal" name="bg3color" value="#ffffff">
+      <input type="text" class="item-color item-color-normal" name="bg3color" id="bg3color" value="#ffffff">
     </label>
      <label class="item">
       Date
-      <input type="text" class="item-color item-color-normal" name="t1color" value="#000000">
+      <input type="text" class="item-color item-color-normal" name="t1color" id="t1color" value="#000000">
     </label>
      <label class="item">
       AM/PM/24H
-      <input type="text" class="item-color item-color-normal" name="t2color" value="#000000">
+      <input type="text" class="item-color item-color-normal" name="t2color" id="t2color" value="#000000">
     </label>
      <label class="item">
       Time
-      <input type="text" class="item-color item-color-normal" name="t4color" value="#000000">
+      <input type="text" class="item-color item-color-normal" name="t4color" id="t4color" value="#000000">
     </label>
      <label class="item">
       Time Shadow
-      <input type="text" class="item-color item-color-normal" name="t3color" value="#ffffff">
+      <input type="text" class="item-color item-color-normal" name="t3color" id="t3color" value="#ffffff">
     </label>
 
   </div>
@@ -180,11 +181,11 @@ Choose your 91 Dub v3.0 settings below:
 
      <label class="item">
       Line Top
-      <input type="text" class="item-color item-color-normal" name="d1color" value="#ffffff">
+      <input type="text" class="item-color item-color-normal" name="d1color" id="d1color" value="#ffffff">
     </label>
      <label class="item">
       Line Bottom
-      <input type="text" class="item-color item-color-normal" name="d2color" value="#ffffff">
+      <input type="text" class="item-color item-color-normal" name="d2color" id="d2color" value="#ffffff">
     </label>
 
   </div>
@@ -197,19 +198,19 @@ Choose your 91 Dub v3.0 settings below:
 
      <label class="item">
       Box Border
-      <input type="text" class="item-color item-color-normal" name="d3color" value="#ffffff">
+      <input type="text" class="item-color item-color-normal" name="d3color" id="d3color" value="#ffffff">
     </label>
      <label class="item">
       Box Fill
-      <input type="text" class="item-color item-color-normal" name="d4color" value="#000000">
+      <input type="text" class="item-color item-color-normal" name="d4color" id="d4color" value="#000000">
     </label>
     <label class="item">
       WR Letters
-      <input type="text" class="item-color item-color-normal" name="d5color" value="#ffffff">
+      <input type="text" class="item-color item-color-normal" name="d5color" id="d5color" value="#ffffff">
     </label>
     <label class="item">
       Water Resist Text
-      <input type="text" class="item-color item-color-normal" name="d6color" value="#ffffff">
+      <input type="text" class="item-color item-color-normal" name="d6color" id="d6color" value="#ffffff">
     </label>
 
   </div>
@@ -221,11 +222,11 @@ Choose your 91 Dub v3.0 settings below:
 
      <label class="item">
       Button Labels
-      <input type="text" class="item-color item-color-normal" name="d7color" value="#ffffff">
+      <input type="text" class="item-color item-color-normal" name="d7color" id="d7color" value="#ffffff">
     </label>
      <label class="item">
       Button Arrows
-      <input type="text" class="item-color item-color-normal" name="d8color" value="#ffffff">
+      <input type="text" class="item-color item-color-normal" name="d8color" id="d8color" value="#ffffff">
     </label>
  
 
@@ -238,19 +239,19 @@ Choose your 91 Dub v3.0 settings below:
 
      <label class="item">
       Battery
-      <input type="text" class="item-color item-color-normal" name="bi1color" value="#000000">
+      <input type="text" class="item-color item-color-normal" name="bi1color" id="bi1color" value="#000000">
     </label>
      <label class="item">
       Battery Warning
-      <input type="text" class="item-color item-color-normal" name="bi2color" value="#000000">
+      <input type="text" class="item-color item-color-normal" name="bi2color" id="bi2color" value="#000000">
     </label>
      <label class="item">
       Battery Critical
-      <input type="text" class="item-color item-color-normal" name="bi3color" value="#000000">
+      <input type="text" class="item-color item-color-normal" name="bi3color" id="bi3color" value="#000000">
     </label>
      <label class="item">
       Battery Charging
-      <input type="text" class="item-color item-color-normal" name="bi4color" value="#000000">
+      <input type="text" class="item-color item-color-normal" name="bi4color" id="bi4color" value="#000000">
     </label>
  
 
