--- a/pebble/settings/91dub.html
+++ b/pebble/settings/91dub.html
@@ -129,11 +129,11 @@ Choose your 91 Dub v3.0 settings below:
 
     <label class="item">
       Background
-      <input type="text" class="item-color item-color-normal" name="bg4color" value="#000000">
+      <input type="text" class="item-color item-color-normal" name="bg4color" id="bg4color" value="#000000">
     </label>
      <label class="item">
       Branding Text
-      <input type="text" class="item-color item-color-normal" name="d9color" value="#ffffff">
+      <input type="text" class="item-color item-color-normal" name="d9color" id="d9color" value="#ffffff">
     </label>
     </div>
 </div>
