--- a/pebble/settings/91dub.html
+++ b/pebble/settings/91dub.html
@@ -93,7 +93,7 @@ Choose your 91 Dub v3.0 settings below:
 
    <label class="item">
       Presets
-          <select id="presets" name="presets" dir='rtl' class="item-select">
+          <select id="presets" name="presets" dir='ltr' class="item-select">
       </select>
     </label>
 
