--- a/pebble/settings/91dub.html
+++ b/pebble/settings/91dub.html
@@ -94,8 +94,11 @@ Choose your 91 Dub v3.0 settings below:
    <label class="item">
       Presets
    </label>
+   <label class="item">
+   	&nbsp;
           <select id="presets" name="presets" dir='ltr' class="item-select">
       </select>
+   </label>
 
 
 
