--- a/pebble/settings/91dub.html
+++ b/pebble/settings/91dub.html
@@ -270,19 +270,19 @@ Choose your 91 Dub v3.0 settings below:
 
      <label class="item">
       Circle Connected
-      <input type="text" class="item-color item-color-normal" name="bl1color" value="#ffffff">
+      <input type="text" class="item-color item-color-normal" name="bl1color" id="bl1color" value="#ffffff">
     </label>
      <label class="item">
       Icon Connected
-      <input type="text" class="item-color item-color-normal" name="bl2color" value="#000000">
+      <input type="text" class="item-color item-color-normal" name="bl2color" id="bl2color" value="#000000">
     </label>
      <label class="item">
       Circle Disconnected
-      <input type="text" class="item-color item-color-normal" name="bl3color" value="#ffffff">
+      <input type="text" class="item-color item-color-normal" name="bl3color" id="bl3color" value="#ffffff">
     </label>
      <label class="item">
       Icon Disconnected
-      <input type="text" class="item-color item-color-normal" name="bl4color" value="#ffffff">
+      <input type="text" class="item-color item-color-normal" name="bl4color" id="bl4color" value="#ffffff">
     </label>
  
 
