--- a/fonts/fonts.html
+++ b/fonts/fonts.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="description" content="Nookrono">
-<script src="https://nivz78.github.io/RockyJS/rocky-0.3.0.js"></script>
+<script src="http://nivz78.github.io/RockyJS/rocky-0.3.0.js"></script>
   <meta charset="utf-8">
   
   <title>RockyJS example</title>
@@ -89,7 +89,7 @@ rocky.update_proc = function (ctx, bounds) {
   graphics_draw_line(ctx, calc_point(((tm_hour+6)/12), bounds.w/12, center), calc_point(tm_hour/12, bounds.w/4, center));
  
  
-  var font3 = fonts_load_custom_font({height: 40, url:"https://nivz78.github.io/fonts/Retro.ttf"});
+  var font3 = fonts_load_custom_font({height: 40, url:"http://nivz78.github.io/fonts/Retro.ttf"});
   graphics_context_set_text_color(ctx, GColorWhite);
   graphics_draw_text(ctx, "[0123456789]", font3, [0, 40, 144, 168], 0, 0);
  
