--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-  <a href="pebble://custom-boot-config-url/offline">Offline Mode"</a>
-  <a href="pebble://custom-boot-config-url/default">Default Mode"</a>
+  <a href="pebble://custom-boot-config-url/offline">Pebble APP Offline Mode"</a><br/>
+  <a href="pebble://custom-boot-config-url/default">Pebble APP Default Mode"</a>
 </body>
 </html>
