--- a/webxr-pico8/index.html
+++ b/webxr-pico8/index.html
@@ -60,50 +60,20 @@
 		<script type="module">
 
 			const chartInfo = {
-				celeste: {
-					"title": "Celeste",
-					"author": "noel",
-					"link": "https://www.lexaloffle.com/bbs/?tid=2145"
-				},
-				deep: {
-					"title": "The Merciless Deep",
-					"author" : "benjamin_soule",
-					"link": "https://www.lexaloffle.com/bbs/?tid=36914"
-				},
-				desert_drift: {
-					"title": "Desert drift",
-					"author" : "johanp",
-					"link": "https://www.lexaloffle.com/bbs/?pid=55232"
-				},
-				katamari: {
-					"title": "Katamari",
-					"author" : "p01",
-					"link": "https://www.lexaloffle.com/bbs/?uid=28958"
-				},
-				polarpanic: {
-					"title": "Polar panic",
-					"author" : "johanp",
-					"link": "https://www.lexaloffle.com/bbs/?tid=36118"
-				},
-				x_wing: {
-					"title": "X-Wing Pico Squadron",
-					"author" : "xavier",
-					"link": "https://www.lexaloffle.com/bbs/?tid=28996"
+				sky_attack: {
+					"title": "Sky Attack",
+					"author" : "NiVZ",
+					"link": "https://www.lexaloffle.com/bbs/?tid=34766"
 				},
 				x_zero: {
 					"title": "X-Zero",
 					"author" : "paranoidcactus",
 					"link": "https://www.lexaloffle.com/bbs/?tid=36053"
-				},
-				plat: {
-					"title": "Tomb of G'Nir",
-					"author" : "paranoidcactus",
-					"link": "https://www.lexaloffle.com/bbs/?pid=52574"
-				},
-				tennis: {
-					"title": "Pico Tennis",
-					"author": "paranoidcactus",
-					"link": "https://www.lexaloffle.com/bbs/?tid=31450"
+				},				
+				pico_dino: {
+					"title": "Pico Dino",
+					"author" : "Yolwoocle",
+					"link": "https://www.lexaloffle.com/bbs/?tid=40759"
 				}
 			};
 
