--- a/webxr-pico8/carts/pico_dino.html
+++ b/webxr-pico8/carts/pico_dino.html
@@ -558,7 +558,7 @@
 
 		}
 		e.type = "application/javascript";
-		e.src = "pico-dino.js";
+		e.src = "pico_dino.js";
 		e.id = "e_script";
 		
 		document.body.appendChild(e); // load and run
