--- a/webxr-pico8/carts/sky_attack.html
+++ b/webxr-pico8/carts/sky_attack.html
@@ -558,7 +558,7 @@
 
 		}
 		e.type = "application/javascript";
-		e.src = "sky-attack.js";
+		e.src = "sky_attack.js";
 		e.id = "e_script";
 		
 		document.body.appendChild(e); // load and run
