--- a/webxr-pico8/carts/sky_attack.html
+++ b/webxr-pico8/carts/sky_attack.html
@@ -83,7 +83,7 @@ canvas{
 		*/
 	</script>
 
-	<script async type="text/javascript" src="x_zero.js"></script>
+	<script async type="text/javascript" src="sky_attack.js"></script>
 	  
 	<script>
 		// key blocker. prevent cursor keys from scrolling page while playing cart.
